--- a/package.json
+++ b/package.json
@@ -1,18 +1,7 @@
 {
-  "name": "xrc",
+  "name": "contract-example",
   "version": "1.0.0",
   "license": "MIT",
-  "scripts": {
-    "transfer": "node dist/transfer.js",
-    "transfer:dev": "ts-node-dev transfer.ts",
-    "main": "node dist/main.js",
-    "main:dev": "ts-node-dev main.ts",
-    "xphere": "node dist/xphereTest.js",
-    "xphere:dev": "ts-node-dev xphereTest.ts",
-    "nft": "node dist/nft.js",
-    "nft:dev": "ts-node-dev nft.ts",
-    "build": "tsc"
-  },
   "dependencies": {
     "config-ini-parser": "^1.6.1",
     "path": "^0.12.7",
@@ -21,7 +10,6 @@
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
-    "@types/node": "^20.12.4",
-    "zigap-utils": "^0.0.30"
+    "@types/node": "^20.12.4"
   }
 }
