--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,8 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "ES6",
+    "module": "CommonJS",
+    "target": "ES2021",
     "moduleResolution": "node",
-    "rootDir": "./xrc-721",
     "outDir": "./dist",
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -12,14 +11,5 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "allowSyntheticDefaultImports": true
-  },
-  "include": [
-    "./xrc-721/**/*.ts",
-    "xrc-721/contract-example.ts",
-    "xrc-721/publish-example.ts",
-    "xrc-721/request-example.ts",
-    "xrc-721/utils/initConfig.ts",
-    "xphere.ini"
-  ],
-  "exclude": ["node_modules", "dist"]
+  }
 }
