--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "xphere": "^1.0.3"
   },
   "devDependencies": {
-    "@types/node": "^20.12.4"
+    "@types/node": "^20.12.4",
+    "@typescript-eslint/eslint-plugin": "^8.2.0",
+    "@typescript-eslint/parser": "^8.2.0",
+    "eslint": "^9.9.0",
+    "prettier": "^3.3.3"
   }
 }
