--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,6 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "allowSyntheticDefaultImports": true
-  }
+  },
+  "include": ["**/*"]
 }
