--- a/package.json
+++ b/package.json
@@ -10,10 +10,20 @@
     "xphere": "^1.0.3"
   },
   "devDependencies": {
-    "@types/node": "^20.12.4",
+    "@eslint/js": "^9.9.0",
+    "@types/node": "^22.5.0",
+    "@types/prompt-sync": "^4.2.3",
     "@typescript-eslint/eslint-plugin": "^8.2.0",
     "@typescript-eslint/parser": "^8.2.0",
     "eslint": "^9.9.0",
-    "prettier": "^3.3.3"
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-promise": "^7.1.0",
+    "globals": "^15.9.0",
+    "prettier": "^3.3.3",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.2.0"
   }
 }
